Fix Ripe alignment and sizing; add month to proj. dates

--- a/src/styles/components/Ripe.css
+++ b/src/styles/components/Ripe.css
@@ -4,21 +4,20 @@
   float: left;
   height: 100%;
   width: 30%;
-  margin-left: -80px;
 }
 
 .rp-photo {
   width: auto;
-  height: 130%;
+  height: 110%;
 }
 
 .rp-sub-content {
   text-align: right;
   float: left;
   height: 40%;
-  width: 60%;
+  width: 50%;
   margin-top: 160px;
-  margin-left: 0;
+  margin-left: -15px;
 }
 
 .rp-title {
